<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.drl.museums_geschichten.activities.StoryListActivity"
    android:background="@color/colorBackground"
    style="@style/mainLayoutStyle"
    android:keepScreenOn="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/toolbarStyle"/>

    <TextView
        android:id="@+id/story_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:text="@string/drafts"
        android:textAllCaps="true"
        style="@style/headerText"/>

    <Button
        android:id="@+id/fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/new_story"
        android:background="@color/colorButtonDark"
        android:onClick="onFabButtonClicked"
        style="@style/textButtonStyle"/>

    <TextView
        android:id="@+id/button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing"
        android:text="@string/click_to_start"
        android:layout_above="@id/fab"
        style="@style/descriptionText"/>

    <ListView
        android:id="@+id/storyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_text"
        android:layout_below="@id/story_title"/>





</RelativeLayout>
